Fix footer heading in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
     <footer>
-      <h4 class="Ra3d">Notes wep >no>n
+      <h4 class="Ra3d">Notes wep</h4>
     </footer>
     <script src="script.js"></script>
   </body>
